--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mock-require": "^1.3.0"
+  },
+  "dependencies": {
+    "random-number-in-range": "^1.0.0"
+  }
 }
