--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Lewis Edward Moten III",
   "license": "ISC",
   "devDependencies": {
     "mock-require": "^1.3.0"
   },
   "dependencies": {
     "random-number-in-range": "^1.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lewismoten/pronounceable-text-generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lewismoten/pronounceable-text-generator/issues"
+  },
+  "homepage": "https://github.com/lewismoten/pronounceable-text-generator#readme"
 }
